# crank

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
.crank/: 357d.md  4f88.md  a101.md  cee2.md  ec39.md  f7e5.md  pm001.md  pm002.md  pm003.md  pm004.md  pm005.md  pm006.md  pm007.md  pm008.md  pm009.md  pm010.md
.crank/workflows/: land.workflow.toml  merge.workflow.toml  release.workflow.toml
.github/workflows/: nightly.yml  pre-merge.yml
apps/crank-alert-badge/: Package.swift  README.md  build.sh
claude-hooks/hooks/: hooks.json  stop-hook.sh
configs/: pika-call-plans-20260227-234032.toml  pika-call-plans.toml
docs/: supervision-alerts-spec.md  tutorials-spec.md  workflows-spec.md  workflows.md
examples/: mock-run.toml
prompts/: help_after_long.md  help_long_about.md  turn_prompt.md
scripts/: codex-notify  watch-run-logs.sh
scripts/land/: apply.sh  approval.sh  common.sh  pre-merge.sh  preflight.sh  tutorial.sh
scripts/merge/: apply.sh  approval.sh  conflicts.sh  pre-merge.sh  preflight.sh  review.sh  tutorial.sh
src/: agentsmd.rs  approval.rs  crank_io.rs  git.rs  lib.rs  main.rs  merge_steps.rs  opencode.rs  run.rs
src/autopilot/: alerts.rs  controls.rs  logging.rs  markers.rs  mod.rs  mux.rs  opencode.rs  session.rs  tmux.rs  worker.rs  zellij.rs
src/task/: branch.rs  claim.rs  cli.rs  creator.rs  deps.rs  git.rs  mod.rs  model.rs  prompts.rs  store.rs  workflow.rs
src/tutorial/: cli.rs  inbox.rs  mod.rs
src/workflow/: mod.rs
teams/: xhigh.toml
tests/e2e/: mux-harness.sh  test-land.sh  test-merge.sh  (+3 more)
(+6 files in other folders)
