[package]
name = "crank"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI prompts
dialoguer = "0.11"

# TUI
crossterm = "0.27"
ratatui = "0.28"

# Random ID generation
rand = "0.8"

# HTTP client (for OpenCode API)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# File locking
fs2 = "0.4"

# Home directory
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
